--- a/provisioner/roles/aws_workshop_login_page/tasks/main.yml
+++ b/provisioner/roles/aws_workshop_login_page/tasks/main.yml
@@ -20,29 +20,27 @@
   register: s3_site
   when: s3_state == 'present'
 
-- name: DNS for student webpage
-  route53:
+- name: dns for landing page (DNS Made Easy)
+  dnsmadeeasy:
+    account_key: "{{dme_account_key}}"
+    account_secret: "{{dme_account_secret}}"
+    domain: "{{workshop_dns_zone}}"
+    record_name: "{{ ec2_name_prefix | lower }}"
+    record_ttl: "600"
+    record_type: CNAME
+    record_value: "{{ ec2_name_prefix | lower }}.{{ workshop_dns_zone }}.s3-website{{ '-' if ec2_region == 'us-east-1' else '.'}}{{ ec2_region }}.amazonaws.com."
     state: "{{ s3_state }}"
-    zone: "{{workshop_dns_zone}}"
-    record: "{{ec2_name_prefix|lower}}.{{workshop_dns_zone}}"
-    type: CNAME
-    overwrite: yes
-    value: "{{ec2_name_prefix|lower}}.{{workshop_dns_zone}}.s3-website-{{ec2_region}}.amazonaws.com"
-  when:
-    - s3_state == 'present'
-    - ec2_region == 'us-east-1'
+  when: dns_provider == 'dme'
 
-- name: DNS for student webpage
+- name: dns for landing page (Route 53)
   route53:
     state: "{{ s3_state }}"
-    zone: "{{workshop_dns_zone}}"
-    record: "{{ec2_name_prefix|lower}}.{{workshop_dns_zone}}"
+    zone: "{{ workshop_dns_zone }}"
+    record: "{{ ec2_name_prefix | lower }}.{{ workshop_dns_zone }}"
     type: CNAME
     overwrite: yes
-    value: "{{ec2_name_prefix|lower}}.{{workshop_dns_zone}}.s3-website.{{ec2_region}}.amazonaws.com"
-  when:
-    - s3_state == 'present'
-    - ec2_region != 'us-east-1'
+    value: "{{ ec2_name_prefix | lower }}.{{ workshop_dns_zone }}.s3-website{{ '-' if ec2_region == 'us-east-1' else '.'}}{{ ec2_region }}.amazonaws.com"
+  when: dns_provider == 'route53'
 
 - name: PUT student webpage
   s3_sync:
