--- a/provisioner/provision_lab.yml
+++ b/provisioner/provision_lab.yml
@@ -161,10 +161,10 @@
       vars:
         type: csr_hub
 
-- name: Alert the mothership
-  hosts: localhost
-  connection: local
-  become: no
-  gather_facts: no
-  roles:
-    - { role: tower_request, when: student_total > 9 }
+# - name: Alert the mothership
+#   hosts: localhost
+#   connection: local
+#   become: no
+#   gather_facts: no
+#   roles:
+#     - { role: tower_request, when: student_total > 9 }
