--- a/provisioner/roles/control_node/tasks/main.yml
+++ b/provisioner/roles/control_node/tasks/main.yml
@@ -108,7 +108,7 @@
     method: POST
     user: admin
     password: "{{admin_password}}"
-    body: "{{ lookup('file',playbook_dir+'/tower_license.json') }}"
+    body: "{{ license_data | default(lookup('file',playbook_dir+'/tower_license.json')) }}"
     body_format: json
     validate_certs: False
   when:
