Fix check for license

--- a/provisioner/provision_lab.yml
+++ b/provisioner/provision_lab.yml
@@ -58,6 +58,7 @@
       when:
        - autolicense is defined
        - autolicense
+       - license_data is not defined
 
 - name: Create lab instances in AWS
   hosts: localhost
