Remove EULA check for license_data extra var

--- a/provisioner/roles/control_node/tasks/main.yml
+++ b/provisioner/roles/control_node/tasks/main.yml
@@ -101,6 +101,8 @@
     - autolicense
     - towerinstall is defined
     - towerinstall
+    - license_data is not defined  
+      `
 
 - name: Post license key
   uri:
