--- a/provisioner/provision_lab.yml
+++ b/provisioner/provision_lab.yml
@@ -116,8 +116,8 @@
   become: yes
   gather_facts: no
   roles:
-    - { role: aws_dns, when: create_login_page is defined and create_login_page and dme_dns is not defined}
-    - { role: dnsmadeeasy, when: create_login_page is defined and create_login_page and dme_dns is defined}
+    - { role: aws_dns, when: create_login_page is defined and create_login_page and dme_account_key is not defined}
+    - { role: dnsmadeeasy, when: create_login_page is defined and create_login_page and dme_account_key is defined}
   tags: control_node
 
 - name: Setup Amazon S3 Website for Student Login
