--- a/provisioner/roles/dnsmadeeasy/tasks/tower.yml
+++ b/provisioner/roles/dnsmadeeasy/tasks/tower.yml
@@ -7,43 +7,14 @@
     tower_username: admin
     tower_password: "{{admin_password}}"
 
-- name: INSTALL CERTBOT
-  yum:
-    name: certbot
-    enablerepo: "rhui-REGION-rhel-server-extras,rhui-REGION-rhel-server-optional"
-
 #https://docs.ansible.com/ansible-tower/latest/html/administration/init_script.html
 - name: TURN OFF TOWER
   shell: ansible-tower-service stop
 
-#If this fails check out status of certbot: https://letsencrypt.status.io/
-- name: ISSUE CERT
-  shell: certbot certonly --standalone -d {{username}}.{{ec2_name_prefix|lower}}.{{workshop_dns_zone}} --email {{ certbot_email }} --noninteractive --agree-tos
-  register: issue_cert
-  until: issue_cert is not failed
-  retries: 5
-  ignore_errors: yes
-
-- name: APPEND LETS ENCRYPT FAILED
-  set_fact:
-    dns_information: |
-      - The Lets Encrypt certbot failed, please check https://letsencrypt.status.io/ to make sure the service is running
-  run_once: yes
-  delegate_to: localhost
-  delegate_facts: true
-  when: issue_cert is failed
-
-- name: MOVE SSL KEY
-  copy:
-    remote_src: True
-    src: "/etc/letsencrypt/live/{{username}}.{{ec2_name_prefix|lower}}.{{workshop_dns_zone}}/privkey.pem"
+- name: INSTALL SSL KEY
+  template:
+    src: ssl_key.j2
     dest: /etc/tower/tower.key
-  when: issue_cert is not failed
-
-- name: GRAB SPECIFIC SSL CERT
-  slurp:
-    src: "/etc/letsencrypt/live/{{username}}.{{ec2_name_prefix|lower}}.{{workshop_dns_zone}}/cert.pem"
-  register: intermediate_cert
 
 - name: COMBINE SPECIFIC AND INTERMEDIATE CERT
   template:
