--- a/provisioner/roles/aws_workshop_login_page/tasks/main.yml
+++ b/provisioner/roles/aws_workshop_login_page/tasks/main.yml
@@ -27,19 +27,19 @@
   register: s3_site
   when: s3_state == 'present'
 
-- name: DME - DNS FOR STUDENT WEBPAGE FOR US-EAST-1
-  dnsmadeeasy:
-    account_key: "{{dme_account_key}}"
-    account_secret: "{{dme_account_secret}}"
-    domain: "{{workshop_dns_zone}}"
-    record_ttl: "600"
-    record_type: CNAME
-    record_name: "{{ ec2_name_prefix|lower }}"
-    state: "{{ s3_state }}"
-    record_value: "{{ ec2_name_prefix|lower }}.{{ workshop_dns_zone }}.s3-website-{{ ec2_region }}.amazonaws.com"
-  delegate_to: localhost
-  when:
-    - ec2_region == 'us-east-1' and dme_account_key is defined
+# - name: DME - DNS FOR STUDENT WEBPAGE FOR US-EAST-1
+#   dnsmadeeasy:
+#     account_key: "{{dme_account_key}}"
+#     account_secret: "{{dme_account_secret}}"
+#     domain: "{{workshop_dns_zone}}"
+#     record_ttl: "600"
+#     record_type: CNAME
+#     record_name: "{{ ec2_name_prefix|lower }}"
+#     state: "{{ s3_state }}"
+#     record_value: "{{ ec2_name_prefix|lower }}.{{ workshop_dns_zone }}.s3-website-{{ ec2_region }}.amazonaws.com"
+#   delegate_to: localhost
+#   when:
+#     - ec2_region == 'us-east-1' and dme_account_key is defined
 
 - name: AWS DNS FOR STUDENT WEBPAGE FOR US-EAST-1
   route53:
