--- a/provisioner/roles/manage_ec2_instances/tasks/teardown.yml
+++ b/provisioner/roles/manage_ec2_instances/tasks/teardown.yml
@@ -312,13 +312,13 @@
         name: "{{ec2_key_name}}"
         region: "{{ ec2_region }}"
         state: absent
- 
+
     - name: delete s3 bucket for persistent storage of ec2 key
       s3_bucket:
         name: "{{ ec2_name_prefix|lower }}.{{ workshop_dns_zone|lower }}.private"
         state: absent
         region: "{{ ec2_region }}"
-        force: yes
+        force: true
       retries: 4
       delay: 15
       register: s3_result
