--- a/provisioner/roles/workshop_check_setup/tasks/main.yml
+++ b/provisioner/roles/workshop_check_setup/tasks/main.yml
@@ -86,12 +86,14 @@
         - not stat_result.stat.exists
     - set_fact:
         tower_license: "{{ lookup('file',playbook_dir+'/tower_license.json'))|from_json|combine({'eula_accepted':true}) }}"
+
   when:
     - autolicense|bool == True
     - tower_license_data is not defined
 
 - set_fact:
     tower_license: "{{ tower_license_data|from_json|combine({'eula_accepted':true}) }}"
+    when: tower_license is not defined
 
 - name: Ensure tower license is not expired
   assert:
