--- a/provisioner/provision_lab.yml
+++ b/provisioner/provision_lab.yml
@@ -110,15 +110,18 @@
           when:
             - not stat_result.stat.exists
         - set_fact:
-            tower_license: "{{ lookup('file',playbook_dir+'/tower_license.json')) |from_json }}"
+            tower_license: "{{ lookup('file',playbook_dir+'/tower_license.json') |from_json }}"
       when:
         - autolicense is defined
         - autolicense
         - tower_license_data is not defined
 
+    - debug:
+        var: tower_license
+
     - set_fact:
         tower_license: "{{ tower_license_data|from_json }}"
-        when: tower_license is not defined
+      when: tower_license is not defined
 
     - assert:
         that: "{{ tower_license.eula_accepted }}"
