--- a/provisioner/roles/control_node/tasks/main.yml
+++ b/provisioner/roles/control_node/tasks/main.yml
@@ -63,10 +63,14 @@
 
 - name: make sure .ssh is created
   file:
-    path: "/home/{{username}}/.ssh/"
-    owner: "{{ username }}"
-    group: "{{ username }}"
+    path: "/home/{{item}}/.ssh/"
+    owner: "{{ item }}"
+    group: "{{ item }}"
     state: directory
+  loop:
+    - "{{ansible_user}}"
+    - "{{username}}"
+
 
 - name: copy over ssh config file
   template:
