--- a/provisioner/roles/control_node/tasks/tower.yml
+++ b/provisioner/roles/control_node/tasks/tower.yml
@@ -107,6 +107,4 @@
     body_format: json
     validate_certs: false
     force_basic_auth: true
-  when:
-    - autolicense is defined
-    - autolicense|bool
+  when: autolicense|default(false)|bool
