--- a/provisioner/roles/workshop_check_setup/tasks/main.yml
+++ b/provisioner/roles/workshop_check_setup/tasks/main.yml
@@ -87,12 +87,14 @@
     - set_fact:
         tower_license: "{{ lookup('file',playbook_dir+'/tower_license.json'))|from_json|combine({'eula_accepted':true}) }}"
   when:
-    - autolicense|default(false)|bool == True
+    - autolicense|default(false)|bool
     - tower_license_data is not defined
 
 - set_fact:
     tower_license: "{{ tower_license_data|from_json|combine({'eula_accepted':true}) }}"
-    when: autolicense|default(false)|bool == True and tower_license is not defined
+    when:
+     - autolicense|default(false)|bool
+     - tower_license is not defined
 
 - name: Ensure tower license is not expired
   assert:
