--- a/provisioner/roles/workshop_check_setup/tasks/main.yml
+++ b/provisioner/roles/workshop_check_setup/tasks/main.yml
@@ -90,12 +90,13 @@
 
 - set_fact:
     tower_license: "{{ tower_license_data|from_json|combine({'eula_accepted':true}) }}"
-    when: autolicense|default(false)|bool and tower_license is not defined
+  when: autolicense|default(false)|bool and tower_license is not defined
 
 - name: Ensure tower license is not expired
   assert:
     that: ansible_date_time.epoch|int < tower_license.license_date|int
     fail_msg: "Ansible Tower License expired.  Please provide valid license."
+  when: autolicense|default(false)|bool
 
 - name: install product_demos collection
   shell: "{{item}}"
